fix spacing
base.css
- django comments -> css comments

claim.html
- use one Generate label reduce width of btns

claims.html, client.html, clients.html, insurances.html, claim_statistics.html,
- add .inline to inline elements, adds a margin to replace the removed spacing after html has been minified

remove make_biomechanical_gait.html, unused

settings.py
- add app comments

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -4,6 +4,9 @@ body {
 }
 
 .ui-datepicker {
-    {# make jquery.datepicker have a higher z-index than boostrap input-group #}
+    /*
+        make jquery.datepicker have a higher z-index than
+        boostrap input-group
+     */
     z-index: 3 !important;
 }
